build-final2.txt
   Compiling arula-cli v0.1.0 (C:\Users\Ahmet\Documents\arula-cli)
warning: unused import: `MessageType`
 --> benches\chat_benchmarks.rs:4:36
  |
4 | use arula_cli::chat::{ChatMessage, MessageType, EnhancedChatMessage, ChatRole};
  |                                    ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> benches\chat_benchmarks.rs:27:27
    |
 27 |                 black_box("Execute command"),
    |                 --------- ^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
    |                 |
    |                 arguments to this function are incorrect
    |
help: the return type of this call is `&'static str` due to the type of the argument passed
   --> benches\chat_benchmarks.rs:27:17
    |
 27 |                 black_box("Execute command"),
    |                 ^^^^^^^^^^-----------------^
    |                           |
    |                           this argument influences the return type of `black_box`
note: function defined here
   --> C:\Users\Ahmet\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\hint.rs:471:14
    |
471 | pub const fn black_box<T>(dummy: T) -> T {
    |              ^^^^^^^^^
help: try using a conversion method
    |
 27 |                 black_box("Execute command".to_string()),
    |                                            ++++++++++++

error[E0308]: mismatched types
   --> benches\chat_benchmarks.rs:28:27
    |
 28 |                 black_box(r#"{"name": "bash_tool", "arguments": "echo hello"}"#),
    |                 --------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
    |                 |
    |                 arguments to this function are incorrect
    |
help: the return type of this call is `&'static str` due to the type of the argument passed
   --> benches\chat_benchmarks.rs:28:17
    |
 28 |                 black_box(r#"{"name": "bash_tool", "arguments": "echo hello"}"#),
    |                 ^^^^^^^^^^-----------------------------------------------------^
    |                           |
    |                           this argument influences the return type of `black_box`
note: function defined here
   --> C:\Users\Ahmet\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\hint.rs:471:14
    |
471 | pub const fn black_box<T>(dummy: T) -> T {
    |              ^^^^^^^^^
help: try using a conversion method
    |
 28 |                 black_box(r#"{"name": "bash_tool", "arguments": "echo hello"}"#.to_string()),
    |                                                                                ++++++++++++

error[E0433]: failed to resolve: use of undeclared type `ChatFactory`
  --> benches\chat_benchmarks.rs:50:9
   |
50 |         ChatFactory::create_user_message("This is a user message with some content"),
   |         ^^^^^^^^^^^ use of undeclared type `ChatFactory`

error[E0433]: failed to resolve: use of undeclared type `ChatFactory`
  --> benches\chat_benchmarks.rs:51:9
   |
51 |         ChatFactory::create_ai_message("This is an AI response with content"),
   |         ^^^^^^^^^^^ use of undeclared type `ChatFactory`

error[E0433]: failed to resolve: use of undeclared type `ChatFactory`
  --> benches\chat_benchmarks.rs:52:9
   |
52 |         ChatFactory::create_tool_call("test_tool", "test_arguments"),
   |         ^^^^^^^^^^^ use of undeclared type `ChatFactory`

error[E0433]: failed to resolve: use of undeclared type `ChatFactory`
  --> benches\chat_benchmarks.rs:76:9
   |
76 |         ChatFactory::create_user_message("This is a user message"),
   |         ^^^^^^^^^^^ use of undeclared type `ChatFactory`

error[E0433]: failed to resolve: use of undeclared type `ChatFactory`
  --> benches\chat_benchmarks.rs:77:9
   |
77 |         ChatFactory::create_ai_message("This is an AI response"),
   |         ^^^^^^^^^^^ use of undeclared type `ChatFactory`

error[E0599]: no function or associated item named `new_tool_result` found for struct `arula_cli::chat::ChatMessage` in the current scope
   --> benches\chat_benchmarks.rs:168:36
    |
168 |     conversation.push(ChatMessage::new_tool_result(
    |                                    ^^^^^^^^^^^^^^^ function or associated item not found in `arula_cli::chat::ChatMessage`
    |
note: if you're trying to build a new `arula_cli::chat::ChatMessage` consider using one of the following associated functions:
      arula_cli::chat::ChatMessage::new
      arula_cli::chat::ChatMessage::new_tool_call
      arula_cli::chat::ChatMessage::new_user_message
      arula_cli::chat::ChatMessage::new_arula_message
      and 2 others
   --> C:\Users\Ahmet\Documents\arula-cli\src\utils\chat.rs:85:5
    |
 85 |     pub fn new(message_type: MessageType, content: String) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 94 |     pub fn new_tool_call(content: String, tool_call_json: String) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
104 |     pub fn new_user_message(content: &str) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
108 |     pub fn new_arula_message(content: &str) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is an associated function `new_tool_call` with a similar name
   --> C:\Users\Ahmet\Documents\arula-cli\src\utils\chat.rs:94:5
    |
 94 |     pub fn new_tool_call(content: String, tool_call_json: String) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `&&Vec<arula_cli::chat::ChatMessage>` is not an iterator
   --> benches\chat_benchmarks.rs:174:28
    |
174 |             for message in &black_box(&conversation) {
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ `&&Vec<arula_cli::chat::ChatMessage>` is not an iterator
    |
    = help: the trait `Iterator` is not implemented for `&&Vec<arula_cli::chat::ChatMessage>`
    = note: required for `&&Vec<arula_cli::chat::ChatMessage>` to implement `IntoIterator`
help: consider removing the leading `&`-reference
    |
174 -             for message in &black_box(&conversation) {
174 +             for message in black_box(&conversation) {
    |

error[E0277]: `&&Vec<arula_cli::chat::ChatMessage>` is not an iterator
   --> benches\chat_benchmarks.rs:184:28
    |
184 |             for message in &black_box(&conversation) {
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^ `&&Vec<arula_cli::chat::ChatMessage>` is not an iterator
    |
    = help: the trait `Iterator` is not implemented for `&&Vec<arula_cli::chat::ChatMessage>`
    = note: required for `&&Vec<arula_cli::chat::ChatMessage>` to implement `IntoIterator`
help: consider removing the leading `&`-reference
    |
184 -             for message in &black_box(&conversation) {
184 +             for message in black_box(&conversation) {
    |

Some errors have detailed explanations: E0277, E0308, E0433, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `arula-cli` (bench "chat_benchmarks") generated 1 warning
error: could not compile `arula-cli` (bench "chat_benchmarks") due to 10 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
